--- a/pair_programming_modulo2_sprint1_ gestionficheros_Beatrizy.ipynb
+++ b/pair_programming_modulo2_sprint1_ gestionficheros_Beatrizy.ipynb
@@ -19,6 +19,17 @@
     "10. Obtener la descripción del Dataframe, tanto de las columnas numéricas cómo de las de tipo \"object\". Explorar el resultado y sacar unas mínimas comclusiones sobre los datos que habéis obtenido.\n",
     "11. Finalmente, guarda el Dataframe en formato \"csv\" con un nombre diferente del original."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
