--- a/pair_programming_modulo2_sprint1_apis_BeatrizyJohana.ipynb
+++ b/pair_programming_modulo2_sprint1_apis_BeatrizyJohana.ipynb
@@ -17,10 +17,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Librerias para exploración y trasnformación de datos\n",
+    "\n",
     "import pandas as pd\n",
     "import requests\n",
     "import re "
@@ -28,26 +30,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Configuración para poder visualizar todas las columnas de los DataFrames\n",
     "pd.set_option('display.max_columns', None) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Definir la url\n",
     "url = \"https://apidatos.ree.es/es/datos/generacion/estructura-generacion?start_date=2011-01-01T00:00&end_date=2011-12-31T23:59&time_trunc=month\"\n",
+    "\n",
+    "# Realiza una solicitud GET a la URL proporcionada\n",
     "datos_llamada = requests.get(url)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -56,18 +62,19 @@
        "200"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Llamada y estado \n",
     "datos_llamada.status_code"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -864,28 +871,49 @@
        "      'datetime': '2011-12-01T00:00:00.000+01:00'}]}}]}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Paso a formato json\n",
     "datos_llamada.json()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# almacenar json en una variable\n",
+    "# Almacenar json en una variable\n",
     "energias = datos_llamada.json()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(energias)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -894,7 +922,7 @@
        "dict_keys(['data', 'included'])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -905,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -920,7 +948,7 @@
        "   'expireAt': '2024-03-17T08:48:42'}}}"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -931,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1721,7 +1749,7 @@
        "     'datetime': '2011-12-01T00:00:00.000+01:00'}]}}]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1732,48 +1760,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'included'",
+     "ename": "NameError",
+     "evalue": "name 'energias_json' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [35]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m energias \u001b[38;5;241m=\u001b[39m requests\u001b[38;5;241m.\u001b[39mget(url2)\n\u001b[1;32m      4\u001b[0m energias_json \u001b[38;5;241m=\u001b[39m energias\u001b[38;5;241m.\u001b[39mjson()\n\u001b[0;32m----> 6\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m datos_llamada \u001b[38;5;129;01min\u001b[39;00m \u001b[43menergias_json\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mincluded\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m:\n\u001b[1;32m      7\u001b[0m     \u001b[38;5;28mprint\u001b[39m(datos_llamada)\n\u001b[1;32m      8\u001b[0m     \u001b[38;5;28;01mbreak\u001b[39;00m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'included'"
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [20]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43menergias_json\u001b[49m()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'energias_json' is not defined"
      ]
     }
    ],
    "source": [
-    "for year in range(2011,2023):\n",
-    "    url2 = f\"https://apidatos.ree.es/es/datos/generacion/estructura-generacion?start_date={year}-T00:00&end_date=T23:59&{year}}\n",
-    "    for datos_llamada in energias_json[\"included\"]:\n",
-    "        print(datos_llamada)\n",
-    "        break"
+    "energias_json() definirlaa"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'dict' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [34]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43menergias_json\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'dict' object is not callable"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "energias_json()"
+    "energia_obtenida_todos = {}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tipo_energia = []\n",
+    "tipo_generacion = []\n",
+    "fecha_lista = []\n",
+    "valor_lista = []\n",
+    "\n",
+    "diccionario = {\"tipo energia\": tipo_energia, \"tipo generacion\": tipo_generacion, \"fecha\": fecha_lista, \"valor\": valor_lista}"
    ]
   },
   {
@@ -1782,10 +1808,59 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tipo energias\n",
-    "tipo generacion\n",
-    "fecha\n",
-    "valor"
+    "#completar y corregir  y que palabra hay que usar antes de los corchetes? \n",
+    "energia = energia[\"data\"][\"included\"][0][\"type\"]\n",
+    "generacion = generacion[\"data\"][\"included\"][0][\"attributes\"][\"type\"]\n",
+    "fecha =  fecha[\"data\"][\"included\"][0]............\n",
+    "valor = valor[\"data\"][\"included\"][0][\"type\"]..........."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tipo_energia.append(energia)\n",
+    "tipo_generacion.append(generacion)\n",
+    "fecha_lista.append(fecha)\n",
+    "valor_lista.append(valor)\n",
+    "\n",
+    "print(diccionario)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'energias_json' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [19]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m year \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m2011\u001b[39m,\u001b[38;5;241m2023\u001b[39m):\n\u001b[1;32m      2\u001b[0m     url2 \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhttps://apidatos.ree.es/es/datos/generacion/estructura-generacion?start_date=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00myear\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m-T00:00&end_date=T23:59&\u001b[39m\u001b[38;5;132;01m{\u001b[39;00myear\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m----> 3\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m datos_llamada \u001b[38;5;129;01min\u001b[39;00m \u001b[43menergias_json\u001b[49m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mincluded\u001b[39m\u001b[38;5;124m\"\u001b[39m]:\n\u001b[1;32m      4\u001b[0m         \u001b[38;5;28mprint\u001b[39m(datos_llamada)\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;28;01mbreak\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'energias_json' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "for year in range(2011,2023):\n",
+    "    url2 = f\"https://apidatos.ree.es/es/datos/generacion/estructura-generacion?start_date={year}-T00:00&end_date=T23:59&{year}\"\n",
+    "    for datos_llamada in energias_json[\"included\"]:\n",
+    "        print(datos_llamada)\n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_ = pd.DataFrame()"
    ]
   },
   {
@@ -1814,8 +1889,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "# El diccionario de cod_comunidades es:\n",
     "cod_comunidades = {'Ceuta': 8744,\n",
     "                    'Melilla': 8745,\n",
@@ -1837,6 +1910,33 @@
     "                    'Región de Murcia': 21,\n",
     "                    'La Rioja': 20}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url_comunidades =\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "llamada22 = requests.get(url_comunidades)\n",
+    "\n",
+    "llamada22.status_code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
