--- a/pair_programming_modulo2_sprint1_apis_BeatrizyJohana.ipynb
+++ b/pair_programming_modulo2_sprint1_apis_BeatrizyJohana.ipynb
@@ -1869,7 +1869,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def energia (año_inicio, año_final): "
+    "def energia (año_inicio, año_final):\n",
+    "    \n",
+    "    e"
    ]
   },
   {
