--- a/pair_programming_modulo2_sprint1_apis_BeatrizyJohana.ipynb
+++ b/pair_programming_modulo2_sprint1_apis_BeatrizyJohana.ipynb
@@ -5,19 +5,14 @@
    "metadata": {},
    "source": [
     "# Pair programming API\n",
-    "Ejercicios de API's: \n",
-    "Enunciado - Obtener datos energéticos usando la API de Red Eléctrica.\n",
-    "Descripción: La empresa para la que trabajamos dispone de una base de datos que contiene información sobre el número de personas censadas en las distintas Comunidades Autónomas españolas desde 1998 hasta 2022. El objetivo es enriquecer estos datos con información sobre la generación de energía renovable y no renovable, utilizando la API de REData, la cual proporciona información sobre el mercado energético en España. Puedes encontrar la documentación de la API .\n",
+    "Ejercicios de API's: Enunciado - Obtener datos energéticos usando la API de Red Eléctrica. Descripción: La empresa para la que trabajamos dispone de una base de datos que contiene información sobre el número de personas censadas en las distintas Comunidades Autónomas españolas desde 1998 hasta 2022. El objetivo es enriquecer estos datos con información sobre la generación de energía renovable y no renovable, utilizando la API de REData, la cual proporciona información sobre el mercado energético en España. Puedes encontrar la documentación de la API .\n",
     "\n",
-    "1. Extracción de Datos a Nivel Nacional:\n",
-    "Extraer datos de generación de energía renovable y no renovable a nivel nacional desde el 1 de enero de 2011 hasta el 31 de diciembre de 2022. La información debe ser recopilada a nivel mensual.\n",
-    "Transformar los datos para incluir una columna nueva que identifique si la energía es renovable o no renovable.\n",
-    "Almacenar los datos en un DataFrame con la siguiente estructura:"
+    "1. Extracción de Datos a Nivel Nacional: Extraer datos de generación de energía renovable y no renovable a nivel nacional desde el 1 de enero de 2011 hasta el 31 de diciembre de 2022. La información debe ser recopilada a nivel mensual. Transformar los datos para incluir una columna nueva que identifique si la energía es renovable o no renovable. Almacenar los datos en un DataFrame con la siguiente estructura:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,20 +35,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Definir la url\n",
-    "url = \"https://apidatos.ree.es/es/datos/generacion/estructura-generacion?start_date=2011-01-01T00:00&end_date=2011-12-31T23:59&time_trunc=month\"\n",
+    "url_energia = \"https://apidatos.ree.es/es/datos/generacion/estructura-generacion?start_date=2011-01-01T00:00&end_date=2011-12-31T23:59&time_trunc=month\"\n",
     "\n",
     "# Realiza una solicitud GET a la URL proporcionada\n",
-    "datos_llamada = requests.get(url)"
+    "datos_llamada_energia = requests.get(url_energia)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +57,7 @@
        "200"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -85,8 +80,7 @@
        "  'attributes': {'title': 'Generación por tecnología',\n",
        "   'last-update': '2019-06-12T15:32:24.000+02:00',\n",
        "   'description': None},\n",
-       "  'meta': {'cache-control': {'cache': 'HIT',\n",
-       "    'expireAt': '2024-03-17T08:48:42'}}},\n",
+       "  'meta': {'cache-control': {'cache': 'MISS'}}},\n",
        " 'included': [{'type': 'Hidráulica',\n",
        "   'id': '10288',\n",
        "   'groupId': '1',\n",
@@ -871,7 +865,7 @@
        "      'datetime': '2011-12-01T00:00:00.000+01:00'}]}}]}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -883,17 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Almacenar json en una variable\n",
-    "energias = datos_llamada.json()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -902,18 +886,21 @@
        "2"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Almacenar json en una variable\n",
+    "energias = datos_llamada.json()\n",
+    "\n",
     "len(energias)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -922,7 +909,7 @@
        "dict_keys(['data', 'included'])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -933,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -944,11 +931,10 @@
        " 'attributes': {'title': 'Generación por tecnología',\n",
        "  'last-update': '2019-06-12T15:32:24.000+02:00',\n",
        "  'description': None},\n",
-       " 'meta': {'cache-control': {'cache': 'HIT',\n",
-       "   'expireAt': '2024-03-17T08:48:42'}}}"
+       " 'meta': {'cache-control': {'cache': 'MISS'}}}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -959,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -1749,7 +1735,7 @@
        "     'datetime': '2011-12-01T00:00:00.000+01:00'}]}}]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1760,129 +1746,198 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diccionario_energia = {\"tipo_energia\": [], \"tipo_generacion\": [], \"fecha_lista\": [], \"valor_lista\": []}\n",
+    "\n",
+    "included = datos_llamada_energia.json()\n",
+    "\n",
+    "datos = included[\"included\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'energias_json' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [20]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43menergias_json\u001b[49m()\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'energias_json' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tipo_energia</th>\n",
+       "      <th>tipo_generacion</th>\n",
+       "      <th>fecha_lista</th>\n",
+       "      <th>valor_lista</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Hidráulica</td>\n",
+       "      <td>Renovable</td>\n",
+       "      <td>2011-01-01T00:00:00.000+01:00</td>\n",
+       "      <td>5119512.380</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Turbinación bombeo</td>\n",
+       "      <td>No-Renovable</td>\n",
+       "      <td>2011-01-01T00:00:00.000+01:00</td>\n",
+       "      <td>283944.912</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Nuclear</td>\n",
+       "      <td>No-Renovable</td>\n",
+       "      <td>2011-01-01T00:00:00.000+01:00</td>\n",
+       "      <td>4706500.878</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Carbón</td>\n",
+       "      <td>No-Renovable</td>\n",
+       "      <td>2011-01-01T00:00:00.000+01:00</td>\n",
+       "      <td>2303087.707</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Fuel + Gas</td>\n",
+       "      <td>No-Renovable</td>\n",
+       "      <td>2011-01-01T00:00:00.000+01:00</td>\n",
+       "      <td>-751.170</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         tipo_energia tipo_generacion                    fecha_lista  \\\n",
+       "0          Hidráulica       Renovable  2011-01-01T00:00:00.000+01:00   \n",
+       "1  Turbinación bombeo    No-Renovable  2011-01-01T00:00:00.000+01:00   \n",
+       "2             Nuclear    No-Renovable  2011-01-01T00:00:00.000+01:00   \n",
+       "3              Carbón    No-Renovable  2011-01-01T00:00:00.000+01:00   \n",
+       "4          Fuel + Gas    No-Renovable  2011-01-01T00:00:00.000+01:00   \n",
+       "\n",
+       "   valor_lista  \n",
+       "0  5119512.380  \n",
+       "1   283944.912  \n",
+       "2  4706500.878  \n",
+       "3  2303087.707  \n",
+       "4     -751.170  "
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "energias_json() definirlaa"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "energia_obtenida_todos = {}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tipo_energia = []\n",
-    "tipo_generacion = []\n",
-    "fecha_lista = []\n",
-    "valor_lista = []\n",
-    "\n",
-    "diccionario = {\"tipo energia\": tipo_energia, \"tipo generacion\": tipo_generacion, \"fecha\": fecha_lista, \"valor\": valor_lista}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#completar y corregir  y que palabra hay que usar antes de los corchetes? \n",
-    "energia = energia[\"data\"][\"included\"][0][\"type\"]\n",
-    "generacion = generacion[\"data\"][\"included\"][0][\"attributes\"][\"type\"]\n",
-    "fecha =  fecha[\"data\"][\"included\"][0]............\n",
-    "valor = valor[\"data\"][\"included\"][0][\"type\"]..........."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tipo_energia.append(energia)\n",
-    "tipo_generacion.append(generacion)\n",
-    "fecha_lista.append(fecha)\n",
-    "valor_lista.append(valor)\n",
-    "\n",
-    "print(diccionario)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'energias_json' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [19]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m year \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m2011\u001b[39m,\u001b[38;5;241m2023\u001b[39m):\n\u001b[1;32m      2\u001b[0m     url2 \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhttps://apidatos.ree.es/es/datos/generacion/estructura-generacion?start_date=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00myear\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m-T00:00&end_date=T23:59&\u001b[39m\u001b[38;5;132;01m{\u001b[39;00myear\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m----> 3\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m datos_llamada \u001b[38;5;129;01min\u001b[39;00m \u001b[43menergias_json\u001b[49m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mincluded\u001b[39m\u001b[38;5;124m\"\u001b[39m]:\n\u001b[1;32m      4\u001b[0m         \u001b[38;5;28mprint\u001b[39m(datos_llamada)\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;28;01mbreak\u001b[39;00m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'energias_json' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "for year in range(2011,2023):\n",
-    "    url2 = f\"https://apidatos.ree.es/es/datos/generacion/estructura-generacion?start_date={year}-T00:00&end_date=T23:59&{year}\"\n",
-    "    for datos_llamada in energias_json[\"included\"]:\n",
-    "        print(datos_llamada)\n",
-    "    break"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_ = pd.DataFrame()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def energia (año_inicio, año_final):\n",
+    "def extraer_datos_energia(datos_llamada_energia, diccionario_energia):\n",
     "    \n",
-    "    e"
+    "    lista_energia = []\n",
+    "    \n",
+    "    for dato in datos:\n",
+    "        tipo_energia = dato[\"type\"]\n",
+    "        tipo_generacion = dato[\"attributes\"][\"type\"]\n",
+    "        fecha_lista = dato[\"attributes\"][\"values\"][0][\"datetime\"]\n",
+    "        valor_lista = dato[\"attributes\"][\"values\"][0][\"value\"]\n",
+    "    \n",
+    "        lista_energia.append({\"tipo_energia\": tipo_energia, \"tipo_generacion\": tipo_generacion, \"fecha_lista\": fecha_lista, \"valor_lista\": valor_lista})\n",
+    "        \n",
+    "    # Crear un Dataframe a partir del diccinario de datos\n",
+    "    df_lista_energia = pd.DataFrame(lista_energia)\n",
+    "    return df_lista_energia\n",
+    "\n",
+    "df_energia = extraer_datos_energia(datos_llamada_energia, diccionario_energia)\n",
+    "df_energia.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              tipo_energia   tipo_generacion                    fecha_lista  \\\n",
+      "0               Hidráulica         Renovable  2011-01-01T00:00:00.000+01:00   \n",
+      "1       Turbinación bombeo      No-Renovable  2011-01-01T00:00:00.000+01:00   \n",
+      "2                  Nuclear      No-Renovable  2011-01-01T00:00:00.000+01:00   \n",
+      "3                   Carbón      No-Renovable  2011-01-01T00:00:00.000+01:00   \n",
+      "4               Fuel + Gas      No-Renovable  2011-01-01T00:00:00.000+01:00   \n",
+      "5           Motores diésel      No-Renovable  2011-01-01T00:00:00.000+01:00   \n",
+      "6           Turbina de gas      No-Renovable  2011-01-01T00:00:00.000+01:00   \n",
+      "7         Turbina de vapor      No-Renovable  2011-01-01T00:00:00.000+01:00   \n",
+      "8          Ciclo combinado      No-Renovable  2011-01-01T00:00:00.000+01:00   \n",
+      "9                   Eólica         Renovable  2011-01-01T00:00:00.000+01:00   \n",
+      "10      Solar fotovoltaica         Renovable  2011-01-01T00:00:00.000+01:00   \n",
+      "11           Solar térmica         Renovable  2011-01-01T00:00:00.000+01:00   \n",
+      "12        Otras renovables         Renovable  2011-01-01T00:00:00.000+01:00   \n",
+      "13            Cogeneración      No-Renovable  2011-01-01T00:00:00.000+01:00   \n",
+      "14  Residuos no renovables      No-Renovable  2011-01-01T00:00:00.000+01:00   \n",
+      "15     Residuos renovables         Renovable  2011-01-01T00:00:00.000+01:00   \n",
+      "16        Generación total  Generación total  2011-01-01T00:00:00.000+01:00   \n",
+      "\n",
+      "     valor_lista  \n",
+      "0   5.119512e+06  \n",
+      "1   2.839449e+05  \n",
+      "2   4.706501e+06  \n",
+      "3   2.303088e+06  \n",
+      "4  -7.511700e+02  \n",
+      "5   3.035381e+05  \n",
+      "6   5.150644e+04  \n",
+      "7   2.391522e+05  \n",
+      "8   5.349870e+06  \n",
+      "9   4.033540e+06  \n",
+      "10  3.512570e+05  \n",
+      "11  3.974313e+04  \n",
+      "12  3.095394e+05  \n",
+      "13  2.641333e+06  \n",
+      "14  1.139666e+05  \n",
+      "15  6.467654e+04  \n",
+      "16  2.591042e+07  \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df_energia)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ejercicio realizado, datos del 2011, pendiente de datos rango de 2011 al 2023"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Extracción de Datos por Comunidad Autónoma:\n",
-    "Extraer datos de generación de energía renovable y no renovable por Comunidad Autónoma.\n",
-    "Utilizar el diccionario cod_comunidades para obtener los códigos de cada comunidad autónoma.\n",
-    "Transformar los datos para incluir una columna que especifique la comunidad autónoma y su identificador.\n",
-    "Almacenar los datos en un DataFrame con la siguiente estructura:"
+    "2. Extracción de Datos por Comunidad Autónoma: Extraer datos de generación de energía renovable y no renovable por Comunidad Autónoma. Utilizar el diccionario cod_comunidades para obtener los códigos de cada comunidad autónoma. Transformar los datos para incluir una columna que especifique la comunidad autónoma y su identificador. Almacenar los datos en un DataFrame con la siguiente estructura:"
    ]
   },
   {
@@ -1911,26 +1966,6 @@
     "                    'Canarias': 8742,\n",
     "                    'Región de Murcia': 21,\n",
     "                    'La Rioja': 20}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "url_comunidades =\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "llamada22 = requests.get(url_comunidades)\n",
-    "\n",
-    "llamada22.status_code"
    ]
   },
   {
