--- a/pair_programming_modulo2_sprint1_apis_BeatrizyJohana.ipynb
+++ b/pair_programming_modulo2_sprint1_apis_BeatrizyJohana.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1930,7 +1930,67 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Ejercicio realizado, datos del 2011, pendiente de datos rango de 2011 al 2023"
+    "# Ejercicio realizado con los datos del 2011, pendiente de datos rango de 2011 al 2023"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url_energia2 = \"https://apidatos.ree.es/es/datos/generacion/estructura-generacion?start_date=2011-01-01T00:00&end_date=2011-12-31T23:59&time_trunc=month\" # duda si usar esta url o hay que modificar la url \n",
+    "start_date = \"2011-01-01T00:00\"\n",
+    "end_date = \"2011-12-31T23:59\"\n",
+    "params = {\n",
+    "    \"start date\": start_date,\n",
+    "    \"end date\": end_date,\n",
+    "    \"time_trunc\": \"month\"\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Inicializar una lista para almacenar los Dataframes de cada año\n",
+    "\n",
+    "dfs = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'response' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [12]\u001b[0m, in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m params[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mend_date\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00myear\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m-12-31T23:59\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m      7\u001b[0m responde \u001b[38;5;241m=\u001b[39m requests\u001b[38;5;241m.\u001b[39mget(url_energia2, params\u001b[38;5;241m=\u001b[39mparams)\n\u001b[0;32m----> 8\u001b[0m data \u001b[38;5;241m=\u001b[39m \u001b[43mresponse\u001b[49m\u001b[38;5;241m.\u001b[39mjson()\n\u001b[1;32m      9\u001b[0m df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(data)\n\u001b[1;32m     11\u001b[0m df[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myear\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m year \u001b[38;5;66;03m# Agregar el año como una columna\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'response' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Iterar sobre los años\n",
+    "\n",
+    "for year in range(2011, 2023):\n",
+    "    params[\"start_date\"] = f\"{year}-01-01T00:00\"\n",
+    "    params[\"end_date\"] = f\"{year}-12-31T23:59\"\n",
+    "    \n",
+    "    responde = requests.get(url_energia2, params=params)\n",
+    "    data = response.json()\n",
+    "    df = pd.DataFrame(data)\n",
+    "    \n",
+    "    df[\"year\"] = year # Agregar el año como una columna\n",
+    "    \n",
+    "    dfs.append(df)"
    ]
   },
   {
