--- a/pair_programming_modulo2_sprint1_apis_BeatrizyJohana.ipynb
+++ b/pair_programming_modulo2_sprint1_apis_BeatrizyJohana.ipynb
@@ -2033,7 +2033,28 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Creamo una variable para almancenar los datos vacia\n",
+    "energia_comunidades_todas = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for año in range(2011,2023):\n",
+    "    for mes in range(1,13):\n",
+    "        for comunidad in cod_comunidades.values():\n",
+    "            energia_comunidades_comunidad = llamar_api(f\"https://apidatos.ree.es/es/datos/generacion/estructura-generacion?start_date=2011-01-01T00:00&end_date=2011-12-31T23:59&time_trunc=month\")\n",
+    "            print(f\"He descargado la informacion para el año {año}, mes {mes} y ccaa {comunidad}.\")\n",
+    "            \n",
+    "            energia_comunidades_todas.extend(energia_comunidades_comunidad)\n",
+    "            time.sleep(0.1*mes) # Comando automático, vuelve a empezar el bucle en función del tiempo que le pongamos\n",
+    "    # with open(\"energia.json\" \"w\") as fichero:\n",
+    "    #     json.dump(energia_comunidades_todas, fichero)"
+   ]
   }
  ],
  "metadata": {
@@ -2052,7 +2073,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
