--- a/pair_programming_modulo2_sprint1_apis_BeatrizyJohana.ipynb
+++ b/pair_programming_modulo2_sprint1_apis_BeatrizyJohana.ipynb
@@ -1873,6 +1873,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for gen in generacion_energia[\"included\"]:\n",
+    "    for e in gen[\"attributes\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 76,
    "metadata": {},
    "outputs": [
@@ -2034,8 +2044,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Creamo una variable para almancenar los datos vacia\n",
-    "energia_comunidades_todas = []"
+    "# Creamos una variable para almancenar los datos vacia\n",
+    "energia_ccaa = {\"aacc\": [], }"
    ]
   },
   {
@@ -2044,16 +2054,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for año in range(2011,2023):\n",
-    "    for mes in range(1,13):\n",
-    "        for comunidad in cod_comunidades.values():\n",
-    "            energia_comunidades_comunidad = llamar_api(f\"https://apidatos.ree.es/es/datos/generacion/estructura-generacion?start_date=2011-01-01T00:00&end_date=2011-12-31T23:59&time_trunc=month\")\n",
-    "            print(f\"He descargado la informacion para el año {año}, mes {mes} y ccaa {comunidad}.\")\n",
+    "for comunidad in cod_comunidades.items():\n",
+    "    for año in range(2011,2023):\n",
+    "        url_ccaa = \"https://apidatos.ree.es/es/datos/generacion/estructura-generacion?start_date=2011-01-01T00:00&end_date=2011-12-31T23:59&time_trunc=month&geo\n",
+    "        print(url_ccaa)\n",
+    "        \n",
+    "        energia = requests.get(url)\n",
+    "        \n",
+    "        energia_json = energia.json()\n",
+    "        \n",
+    "        for info in energia_json\n",
     "            \n",
-    "            energia_comunidades_todas.extend(energia_comunidades_comunidad)\n",
-    "            time.sleep(0.1*mes) # Comando automático, vuelve a empezar el bucle en función del tiempo que le pongamos\n",
-    "    # with open(\"energia.json\" \"w\") as fichero:\n",
-    "    #     json.dump(energia_comunidades_todas, fichero)"
+    "     \n",
+    "        \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "energia_ccaa={'ccaa':[], \"tipo_energia\":[],\"tipo_generacion\":[],\"fecha\": [], \"valor\":[]}\n",
+    "for k,v in cod_comunidades.items():\n",
+    "    for anyo in range(2020,2023):\n",
+    "        url_ccaa = f'https://apidatos.ree.es/es/datos/generacion/estructura-generacion?start_date={anyo}-01-01T00:00&end_date={anyo}-12-31T23:59&time_trunc=month&&geo_limit=ccaa&geo_ids={v}'\n",
+    "        print(url_ccaa)\n",
+    "        energia = requests.get(url)\n",
+    "        energia_json = energia.json()\n",
+    "        for info in energia_json['included']:\n",
+    "            tipo_energia = info[\"type\"]\n",
+    "            tipo_generacion = info['attributes']['type']\n",
+    "            fecha = info['attributes']['values'][0]['datetime']\n",
+    "            valor = info['attributes']['values'][0]['value']\n",
+    "            energia_ccaa[\"tipo_energia\"].append(tipo_energia)\n",
+    "            energia_ccaa[\"tipo_generacion\"].append(tipo_generacion)\n",
+    "            energia_ccaa['fecha'].append(fecha)\n",
+    "            energia_ccaa['valor'].append(valor)\n",
+    "            energia_ccaa['ccaa'].append(k)\n"
    ]
   }
  ],
