--- a/pair programming-modulo2-spint1-04selenium_BeatrizyJohana.ipynb
+++ b/pair programming-modulo2-spint1-04selenium_BeatrizyJohana.ipynb
@@ -45,6 +45,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Intalacion"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [
@@ -410,7 +419,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
