--- a/pair_programming_modulo2_sprint1_03beautifulsoap_BeatrizyJohana.ipynb
+++ b/pair_programming_modulo2_sprint1_03beautifulsoap_BeatrizyJohana.ipynb
@@ -22,6 +22,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Hola Bea , vaya susto!"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 104,
    "metadata": {},
    "outputs": [],
@@ -9406,7 +9415,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
