--- a/pair_programming_modulo2_sprint1_02apis_BeatrizyJohana.ipynb
+++ b/pair_programming_modulo2_sprint1_02apis_BeatrizyJohana.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,19 +48,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'datos_llamada' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [8]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Llamada y estado \u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[43mdatos_llamada\u001b[49m\u001b[38;5;241m.\u001b[39mstatus_code\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'datos_llamada' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "200"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -70,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -81,8 +80,7 @@
        "  'attributes': {'title': 'Generación por tecnología',\n",
        "   'last-update': '2019-06-12T15:32:24.000+02:00',\n",
        "   'description': None},\n",
-       "  'meta': {'cache-control': {'cache': 'HIT',\n",
-       "    'expireAt': '2024-03-21T17:32:43'}}},\n",
+       "  'meta': {'cache-control': {'cache': 'MISS'}}},\n",
        " 'included': [{'type': 'Hidráulica',\n",
        "   'id': '10288',\n",
        "   'groupId': '1',\n",
@@ -867,7 +865,7 @@
        "      'datetime': '2011-12-01T00:00:00.000+01:00'}]}}]}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -879,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -888,7 +886,7 @@
        "2"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -902,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -911,7 +909,7 @@
        "dict_keys(['data', 'included'])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -922,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -933,11 +931,10 @@
        " 'attributes': {'title': 'Generación por tecnología',\n",
        "  'last-update': '2019-06-12T15:32:24.000+02:00',\n",
        "  'description': None},\n",
-       " 'meta': {'cache-control': {'cache': 'HIT',\n",
-       "   'expireAt': '2024-03-21T17:32:43'}}}"
+       " 'meta': {'cache-control': {'cache': 'MISS'}}}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -948,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1738,7 +1735,7 @@
        "     'datetime': '2011-12-01T00:00:00.000+01:00'}]}}]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1749,7 +1746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1762,7 +1759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1848,7 +1845,7 @@
        "4     -751.170  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1876,7 +1873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1884,7 +1881,7 @@
      "evalue": "invalid syntax (1685418301.py, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  Input \u001b[0;32mIn [17]\u001b[0;36m\u001b[0m\n\u001b[0;31m    for e in gen[\"attributes\"]\u001b[0m\n\u001b[0m                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  Input \u001b[0;32mIn [12]\u001b[0;36m\u001b[0m\n\u001b[0;31m    for e in gen[\"attributes\"]\u001b[0m\n\u001b[0m                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -1895,7 +1892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2111,25 +2108,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Ejercicio realizado para el rango de 2011 a 2023:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# URL con fecha de inicio y fin\n",
-    "url_energia2 = f\"https://apidatos.ree.es/es/datos/generacion/estructura-generacion?start_date={start_date}T00:00&end_date={end_date}T23:59&time_trunc=month\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
    "outputs": [
     {
      "ename": "KeyError",
@@ -2144,6 +2122,7 @@
     }
    ],
    "source": [
+    "# Ejercicio realizado para el rango de 2011 a 2023:\n",
     "# Iterar sobre los años y meses:\n",
     "\n",
     "for year in range(2011, 2023):\n",
@@ -2152,38 +2131,41 @@
     "        \n",
     "        start_date = f\"{year}-{mes:02d}-01\"\n",
     "        end_date = f'{year}-{mes:02d}-31' \n",
-    "    \n",
-    "    responde = requests.get(url_energia2)\n",
-    "    data_json= responde.json()\n",
-    "    \n",
-    "    for energia in data_json['included']:\n",
-    "            tipo_energia = energia['attributes']['title']\n",
-    "            tipo_generacion = energia['attributes']['type']\n",
-    "            fecha = energia['attributes']['values'][0]['datetime']\n",
-    "            valor = energia['attributes']['values'][0]['value']\n",
+    "        # Llammamos a la API\n",
+    "        url_energia2 = f\"https://apidatos.ree.es/es/datos/generacion/estructura-generacion?start_date={fecha_inicio}T00:00&end_date={fecha_fin}T23:59&time_trunc=month\"\n",
+    "        energiaa = llamar_api(url_energia2, start_date, end_date)\n",
+    "        \n",
+    "        if energiaa:\n",
+    "            extraccion_datos(energias, diccionario_energia)\n",
+    "         \n",
+    "#         for energia in data_json['included']:\n",
+    "#             tipo_energia = energia['attributes']['title']\n",
+    "#             tipo_generacion = energia['attributes']['type']\n",
+    "#             fecha = energia['attributes']['values'][0]['datetime']\n",
+    "#             valor = energia['attributes']['values'][0]['value']\n",
     "            \n",
-    "#Apendeamos en las listas vacías del diccionario \n",
-    "            diccionario_energia['tipo_energia'].append(tipo_energia)\n",
-    "            diccionario_energia['tipo_generacion'].append(tipo_energia)\n",
-    "            diccionario_energia['fecha'].append(fecha)\n",
-    "            diccionario_energia['valor'].append(valor)"
+    "# #Apendeamos en las listas vacías del diccionario \n",
+    "#             diccionario_energia['tipo_energia'].append(tipo_energia)\n",
+    "#             diccionario_energia['tipo_generacion'].append(tipo_energia)\n",
+    "#             diccionario_energia['fecha'].append(fecha)\n",
+    "#             diccionario_energia['valor'].append(valor)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'tipo_energia': ['Hidráulica', 'Hidráulica', 'Hidráulica', 'Hidráulica'],\n",
-       " 'tipo_generacion': ['Hidráulica', 'Hidráulica', 'Hidráulica', 'Hidráulica'],\n",
+       "{'tipo_energia': [],\n",
+       " 'tipo_generacion': [],\n",
        " 'fecha_lista': [],\n",
        " 'valor_lista': []}"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2194,7 +2176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2237,7 +2219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2265,7 +2247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2275,7 +2257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
