--- a/pair_programming_modulo2_sprint1_02apis_BeatrizyJohana.ipynb
+++ b/pair_programming_modulo2_sprint1_02apis_BeatrizyJohana.ipynb
@@ -2207,7 +2207,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Realizar el ejercicio con funciones:\n"
+    "# Ejercicio realizado con funciones:\n"
    ]
   },
   {
