--- a/pair_programming_modulo2_sprint1_03beautifulsoap_BeatrizyJohana.ipynb
+++ b/pair_programming_modulo2_sprint1_03beautifulsoap_BeatrizyJohana.ipynb
@@ -26,6 +26,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#hola"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Hola Bea , vaya susto!"
    ]
   },
