--- a/NUEVO SELENIUM.ipynb
+++ b/NUEVO SELENIUM.ipynb
@@ -31,6 +31,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#  Intalaciones a realizar\n",
+    "!pip install pandas\n",
+    "!pip install selenium\n",
+    "!pip install beautifulsoup4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Importar librerías para tratamiento de datos\n",
     "# -----------------------------------------------------------------------\n",
     "import pandas as pd  # Pandas es una poderosa librería para manipulación y análisis de datos en Python.\n",
@@ -49,7 +61,9 @@
     "from time import sleep  # Sleep se utiliza para pausar la ejecución del programa por un número de segundos.\n",
     "# Importar\n",
     "import warnings\n",
-    "warnings.filterwarnings('ignore')"
+    "warnings.filterwarnings('ignore')\n",
+    "# Importar libreria Numpy\n",
+    "import numpy as np"
    ]
   },
   {
@@ -69,22 +83,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Inicializar el navegador y maximizar la página\n",
     "driver = webdriver.Chrome()\n",
+    "driver.maximize_window()\n",
+    "\n",
+    "# Ir a la página principal de La Casa del Libro\n",
     "url = \"https://www.casadellibro.com/\"\n",
     "driver.get(url)\n",
-    "driver.maximize_window()\n",
-    "sleep(3)\n",
     "\n",
-    "# aceptar cookies \n",
+    "sleep(4)\n",
+    "\n",
+    "# Aceptar las cookies si es necesario\n",
     "driver.find_element(\"xpath\", '//*[@id=\"onetrust-accept-btn-handler\"]').click()\n",
     "sleep(5)\n",
-    "# buscar libros de ficcion \n",
+    "\n",
+    "# Ir a la sección de libros de ficción\n",
     "driver.find_element(\"css selector\", '#app > div.v-application--wrap > div.when-mobile > div.cabecera.desktop > div.bottom-row > div > div > div:nth-child(2) > a').click()\n",
     "\n",
-    "dict_casa_del_libro = {\"Título del libro\": [], \"Autor(es) del libro\": [], \"Precio del libro\" : [], \"Editorial del libro\" : [], \"Idioma\" : [], \"Numero de paginas del libro\": []}\n",
     "\n",
+    "# Creacion de diccionario de la casa del libro vacio\n",
+    "diccionario_ficcion = {\"Título del libro\": [], \"Autor(es) del libro\": [], \"Precio del libro\" : [], \"Editorial del libro\" : [], \"Idioma\" : [], \"Numero de paginas del libro\": []}\n",
     "\n",
     "sleep(3)\n",
+    "\n",
+    "# # Sacar selectores del primer producto\n",
+    "# driver.find_element(\\\"css selector\\\", \\\"#buscadorNF > div.col-md-9.col-12 > div > div.grid-view.mt-4 > div:nth-child(1) > a > div > img\\\").click()\\n\",\n",
+    "\n",
+    "# sleep(5)\\\n",
+    "\n",
+    "# titulo = driver.find_element(\\\"css selector\\\", \\\"#app > div.v-application--wrap > main > div > div > div > div:nth-child(3) > div > div.col-md-5.order-lg-2.col-12.order-1 > div > h1\\\").text\\n\",\n",
+    "# print(titulo)\\\n",
+    "#  autor = driver.find_element(\\\"css selector\\\", \\\"#app > div.v-application--wrap > main > div > div > div > div:nth-child(3) > div > div.col-md-5.order-lg-2.col-12.order-1 > div > div.text-h5.d-flex.flex-wrap.author.mb-2.justify-center.justify-sm-start > div > a > span:nth-child(1)\\\").text\\n\",\n",
+    "# print(autor)\n",
+    "\n",
+    "# precio = driver.find_element(\\\"css selector\\\",\\\"#app > div.v-application--wrap > main > div > div > div > div:nth-child(3) > div > div.border-left.col-md-4.col-12.order-3 > div > div:nth-child(3) > div.col.col-8 > strong\\\").text\\n\",\n",
+    "# print(precio)\n",
+    "# editorial = driver.find_element(\\\"css selector\\\",\\\"#app > div.v-application--wrap > main > div > div > div > div:nth-child(3) > div > div.col-md-5.order-lg-2.col-12.order-1 > div > div.d-none.d-md-inline > div:nth-child(1) > span:nth-child(1)\\\").text\\n\",\n",
+    "# print(editorial)\n",
+    "# idioma = driver.find_element(\\\"css selector\\\",\\\"#app > div.v-application--wrap > main > div > div > div > div:nth-child(6) > div > div.caracteristicas.mt-4.pt-4 > div:nth-child(3)\\\").text\\n\",\n",
+    "#  print(idioma)\n",
+    "# numero_páginas = driver.find_element(\\\"css selector\\\", \\\"#app > div.v-application--wrap > main > div > div > div > div:nth-child(6) > div > div.caracteristicas.mt-4.pt-4 > div:nth-child(1)\\\").text\\n\",\n",
+    "# print(numero_páginas)\n",
+    "#     sleep(5)\n",
+    "\n",
     "# Iterar a través de productos de los 5 primeros elementos\n",
     "    \n",
     "for i in range(1,6):\n",
@@ -98,15 +139,15 @@
     "    sleep(8)\n",
     "\n",
     "\n",
-    "    dict_casa_del_libro[\"Título del libro\"].append(driver.find_element(\"css selector\",\"#app > div.v-application--wrap > main > div > div > div > div:nth-child(3) > div > div.col-md-5.order-lg-2.col-12.order-1 > div > h1\").text)\n",
-    "    dict_casa_del_libro[\"Autor(es) del libro\"].append(driver.find_element(\"css selector\", \"#app > div.v-application--wrap > main > div > div > div > div:nth-child(3) > div > div.col-md-5.order-lg-2.col-12.order-1 > div > div.text-h5.d-flex.flex-wrap.author.mb-2.justify-center.justify-sm-start > div > a > span:nth-child(1)\").text)\n",
+    "    diccionario_ficcion[\"Título del libro\"].append(driver.find_element(\"css selector\",\"#app > div.v-application--wrap > main > div > div > div > div:nth-child(3) > div > div.col-md-5.order-lg-2.col-12.order-1 > div > h1\").text)\n",
+    "    diccionario_ficcion[\"Autor(es) del libro\"].append(driver.find_element(\"css selector\", \"#app > div.v-application--wrap > main > div > div > div > div:nth-child(3) > div > div.col-md-5.order-lg-2.col-12.order-1 > div > div.text-h5.d-flex.flex-wrap.author.mb-2.justify-center.justify-sm-start > div > a > span:nth-child(1)\").text)\n",
     "    try:\n",
-    "        dict_casa_del_libro[\"Precio del libro\"].append(driver.find_element(\"css selector\", \"#app > div.v-application--wrap > main > div > div > div > div:nth-child(3) > div > div.border-left.col-md-4.col-12.order-3 > div > div:nth-child(3) > div.col.col-8 > strong\").text)\n",
+    "        diccionario_ficcion[\"Precio del libro\"].append(driver.find_element(\"css selector\", \"#app > div.v-application--wrap > main > div > div > div > div:nth-child(3) > div > div.border-left.col-md-4.col-12.order-3 > div > div:nth-child(3) > div.col.col-8 > strong\").text)\n",
     "    except:\n",
-    "        dict_casa_del_libro[\"Precio del libro\"].append(driver.find_element(\"css selector\", \"#app > div.v-application--wrap > main > div > div > div > div:nth-child(3) > div > div.border-left.col-md-4.col-12.order-3 > div > div:nth-child(4) > div > div.text-h4.font-weight-bold > span\").text)\n",
-    "    dict_casa_del_libro[\"Editorial del libro\"].append(driver.find_element(\"css selector\",'div.caracteristicas.mt-4.pt-4 > div:nth-child(2)').text)\n",
-    "    dict_casa_del_libro[\"Numero de paginas del libro\"].append(driver.find_element(\"css selector\", \"div.caracteristicas.mt-4.pt-4 > div:nth-child(1)\").text)\n",
-    "    dict_casa_del_libro[\"Idioma\"].append(driver.find_element(\"css selector\", \"div.caracteristicas.mt-4.pt-4 > div:nth-child(3)\").text)\n",
+    "        diccionario_ficcion[\"Precio del libro\"].append(driver.find_element(\"css selector\", \"#app > div.v-application--wrap > main > div > div > div > div:nth-child(3) > div > div.border-left.col-md-4.col-12.order-3 > div > div:nth-child(4) > div > div.text-h4.font-weight-bold > span\").text)\n",
+    "    diccionario_ficcion[\"Editorial del libro\"].append(driver.find_element(\"css selector\",'div.caracteristicas.mt-4.pt-4 > div:nth-child(2)').text)\n",
+    "    diccionario_ficcion[\"Numero de paginas del libro\"].append(driver.find_element(\"css selector\", \"div.caracteristicas.mt-4.pt-4 > div:nth-child(1)\").text)\n",
+    "    diccionario_ficcion[\"Idioma\"].append(driver.find_element(\"css selector\", \"div.caracteristicas.mt-4.pt-4 > div:nth-child(3)\").text)\n",
     "\n",
     "\n",
     "# Esperar 3 segundos antes de volver a la lista de productos\n",
@@ -142,9 +183,19 @@
     "        diccionario_limpio[\"Numero de paginas del libro\"].append(paginas_modificado)\n",
     "\n",
     "\n",
-    "    return diccionario_limpio    \n",
-    "dict_limpio = limpieza_datos(dict_casa_del_libro)\n",
-    "dt_libros=pd.DataFrame(dict_limpio)\n",
+    "    return diccionario_limpio    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dict_limpio = limpieza_datos(diccionario_ficcion)\n",
+    "\n",
+    "# Creacion Dataframe\n",
+    "dt_libros = pd.DataFrame(diccionario_ficcion)\n",
     "dt_libros"
    ]
   }
