--- a/NUEVO SELENIUM.ipynb
+++ b/NUEVO SELENIUM.ipynb
@@ -27,9 +27,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pandas in /home/jrl19/anaconda3/lib/python3.9/site-packages (1.4.2)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.1 in /home/jrl19/anaconda3/lib/python3.9/site-packages (from pandas) (2.8.2)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /home/jrl19/anaconda3/lib/python3.9/site-packages (from pandas) (2021.3)\n",
+      "Requirement already satisfied: numpy>=1.18.5 in /home/jrl19/anaconda3/lib/python3.9/site-packages (from pandas) (1.21.5)\n",
+      "Requirement already satisfied: six>=1.5 in /home/jrl19/anaconda3/lib/python3.9/site-packages (from python-dateutil>=2.8.1->pandas) (1.16.0)\n",
+      "^C\n",
+      "\u001b[31mERROR: Operation cancelled by user\u001b[0m\n",
+      "Requirement already satisfied: beautifulsoup4 in /home/jrl19/anaconda3/lib/python3.9/site-packages (4.11.1)\n",
+      "Requirement already satisfied: soupsieve>1.2 in /home/jrl19/anaconda3/lib/python3.9/site-packages (from beautifulsoup4) (2.3.1)\n"
+     ]
+    }
+   ],
    "source": [
     "#  Intalaciones a realizar\n",
     "!pip install pandas\n",
@@ -201,8 +217,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
