--- a/pair_programming_modulo2_sprint1_03beautifulsoap_BeatrizyJohana.ipynb
+++ b/pair_programming_modulo2_sprint1_03beautifulsoap_BeatrizyJohana.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pair programming Beautiful Soup\n",
+    "# PAIR PROGRAMMING- BEAUTIFUL SOUP\n",
+    "MODULO 2\n",
+    "\n",
     "Enunciado: Escribe una función llamada scrape_coches_ocasion que acepta una URL como argumento y devuelve un DataFrame de pandas con información sobre coches de ocasión encontrados en la página web especificada. La función realizará las siguientes tareas:\n",
     "1. Realizará una solicitud HTTP GET a la siguiente url.\n",
     "2. Comprobará el código de estado de la respuesta. Si el código no es 200 (OK), imprimirá un mensaje de error y retornará None.\n",
